syntax = "proto3";
import "api/proto/auth/SignIn.proto";
package cloud.lianmi.im.auth;
option go_package = "github.com/lianmi/servers/api/proto/auth";


message AuthorizeCodeReq {
    string appKey = 1;
    ClientType clientType = 2;
    string deviceId = 3;
    string os = 4;
    string protocolVersion = 5;
    string sdkVersion = 6;

}

message AuthorizeCodeRsp {
    string code = 1;
    int64 ExpiredAt = 2;

}